# cpld-jats-transformations

./: LICENSE  NISO-CPandLD-pub.xml  NOTICE.MD  README.md  cpld-to-jats.py  jats-to-cpld.py  jats2html.xslt  pyproject.toml
cpld2jats/: convert.py
examples/: roundtripping-cpld-and-jats-JATSCon-2025.html  roundtripping-cpld-and-jats-JATSCon-2025.jsonld
jats2cpld/: convert.py
