[tool.poetry]
name = "cpld-to-jats-transformation"
version = "0.1.0"
description = "Transformations from Content Profiles/Linked Documents (CP/LD) to the Journal Article Tag Suite (JATS) XML"
authors = ["Rinke Hoekstra <r.hoekstra@elsevier.com>","Edgar Schouten <e.schouten@elsevier.com>"]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.6.3"
rdflib = "^6.0.0"
requests = "^2.32.2"
flask = "^2.3.2"
click = "^8.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
